# snake-wasm

./: Cargo.toml
snake/: Cargo.toml
snake/src/: coords.rs  direction.rs  error.rs  game.rs  lib.rs  snake.rs
src/: main.rs
static/: index.html
web/: Cargo.toml
web/src/: main.rs  themes.rs
web/src/draw/: background.rs  clear.rs  goal.rs  grid.rs  mod.rs  snake.rs
web/static/: index.html
