[package]
name = "web"
version = "0.1.0"
authors = ["LightDiscord <root@arnaud.sh>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1"
snake = { path = "../snake" }
futures-util-preview = "0.3.0-alpha.15"

[dependencies.stdweb]
version = "0.4"
features = ["futures-support", "experimental_features_which_may_break_on_minor_version_bumps"]
